# RAG-01-Project

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: chunker.py  embedder.py  ingest.py  llm.py  rag.py  retriever.py  vector_store.py
vectorstore/: chunks.pkl  dbms.index  metadata.pkl
