[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-pdf>=0.2.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
]
